[LEMS-3537/article-preview-panel] fix spacing

--- a/packages/perseus-editor/src/__docs__/preview-panel.module.css
+++ b/packages/perseus-editor/src/__docs__/preview-panel.module.css
@@ -5,7 +5,9 @@
     min-width: 500px;
     height: 90vh;
     overflow: auto;
-    background-color: var(--wb-semanticColor-core-background-instructive-subtle);
+    background-color: var(
+        --wb-semanticColor-core-background-instructive-subtle
+    );
     padding: var(--wb-sizing-size_160);
     border-radius: var(--wb-sizing-size_120);
     display: flex;
